# Archa-Coding-Challenge

./: .dockerignore  .gitignore  END_OF_DAY_SUMMARY.md  README.md  archa_postman_collection.json  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/db/: models.py  seed.py  session.py  uow.py
backend/app/modules/expenses/categories/: repo.py  router.py  schemas.py  service.py
backend/app/modules/expenses/codes/: repo.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_categories.py  test_codes.py
frontend/: eslint.config.js  jest.config.cjs  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts
frontend/__mocks__/: svgMock.js
frontend/src/: App.tsx  index.css
frontend/src/api/: categories.ts  codes.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/features/: CategoryCard.tsx  CategoryList.tsx  CreateCategoryForm.tsx  CreateCodeForm.tsx  EditCategoryCard.tsx  EditCodeCard.tsx  ExpenseCodeCard.tsx  ExpenseCodeList.tsx  index.ts
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Checkbox.tsx  EditButton.tsx  FormActions.tsx  FormError.tsx  Input.tsx  LoadingSkeleton.tsx  LoadingSpinner.tsx  Modal.tsx  (+2 more)
frontend/src/hooks/: index.ts  useCategories.ts  useCategoryMutations.ts  useCodeMutations.ts  useErrorMessage.ts  useExpenseCodes.ts
frontend/src/lib/: api-client.ts  constants.ts  index.ts  schemas.ts  utils.ts
frontend/src/types/: index.ts
(+4 files in other folders)
